single require config for tests and app

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,9 @@
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.js"></script>
-    <script data-main="main" src="bower_components/requirejs/require.js"></script>
+    <script data-main="config" src="bower_components/requirejs/require.js"></script>
+    <script src="main.js"></script>
+
     <script id="view-template" type="text/html">
         <form role="form">
             <div class="form-group">
