--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/css/bootstrap.css">
     <link rel="stylesheet" href="styles/main.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -28,7 +29,9 @@
     <script id="view-template" type="text/html">
         <form role="form">
             <div class="form-group">
-                <input type="text" class="form-control">
+                <label>
+                    <input type="text" class="form-control">
+                </label>
             </div>
         </form>
     </script>
